[gd_scene load_steps=3 format=3 uid="uid://2bpmy3gc8gmh"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_3m4n0"]
[ext_resource type="Theme" uid="uid://o8srjngdmvsl" path="res://themes/default_theme.tres" id="2_oxt34"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3m4n0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 75.0
offset_top = -166.0
offset_right = 175.0
offset_bottom = -100.0
grow_vertical = 0
scale = Vector2(1.38797, 1.45097)

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
mouse_force_pass_scroll_events = false
theme = ExtResource("2_oxt34")
text = "Start"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Start")
theme = ExtResource("2_oxt34")
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_top = 37.0
offset_right = 107.0
offset_bottom = 82.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "The Best Medicine"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
